--- a/templates/pages/volume.html
+++ b/templates/pages/volume.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Weight 
+Volume
 {% endblock title %}
 
 {% load static %}
@@ -14,7 +14,7 @@ Weight
 <h1>This is the page to make volume conversions</h1>
 <section class="app-container">
 <div class="conversion-form">
-<h3>Convert Weight</h3>
+<h3>Convert Volume</h3>
 
 <fieldset style="background-color: lightgoldenrodyellow;">
 <form method="POST" action="{% url 'volume' %}">
