--- a/static/css/base.css
+++ b/static/css/base.css
@@ -66,6 +66,11 @@ ul {
     background-color: lightgreen;
 }
 
+.login-button {
+    float: right;
+    display: flex;
+    flex: row;
+}
 @media (min-width: 990px) {
 
 
@@ -98,6 +103,7 @@ h2 {
     display: flex;
     flex-direction: row;
 }
+
 
 
 }
